[BE] Introduce envers and pagination
