# process-service-api/src/main/java/com/yeshenko/processserviceapi/domain/repository/custom/CustomProcessEntityRepository.java
@@ -1,0 +1,12 @@
+package com.yeshenko.processserviceapi.domain.repository.custom;
+
+import com.yeshenko.processserviceapi.domain.entity.ProcessEntity;
+import org.springframework.data.jpa.domain.Specification;
+
+import java.util.List;
+import java.util.Map;
+
+public interface CustomProcessEntityRepository {
+
+    Map<String, List<Object>> findColumns(Specification<ProcessEntity> specification);
+}
