# process-service-api/src/main/java/com/yeshenko/processserviceapi/domain/repository/envers/ProcessEntityRevisionRepository.java
@@ -1,0 +1,11 @@
+package com.yeshenko.processserviceapi.domain.repository.envers;
+
+import com.yeshenko.processserviceapi.domain.entity.ProcessEntity;
+import org.springframework.data.repository.history.RevisionRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.UUID;
+
+@Repository
+public interface ProcessEntityRevisionRepository extends RevisionRepository<ProcessEntity, UUID, Integer> {
+}
